--- a/site/config.toml
+++ b/site/config.toml
@@ -52,8 +52,8 @@ copyright = "Andrew Wong (z5206677)"
   url = "/categories/"
 
 [params]
-  # fathomHost="stats.example.com"
-  # fathomSiteID="ABCDE"
+  fathomHost="ss.featherbear.cc"
+  fathomSiteID="NEQTU"
 
   version = "4.x"           # Used to give a friendly message when you have an incompatible update
   debug = false             # If true, load `eruda.min.js`. See https://github.com/liriliri/eruda
