--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -26,7 +26,7 @@ jobs:
       run: hugo --gc --minify --cleanDestinationDir -s site -d public
 
     - name: Copy project files to public
-      run: cp -R project/ public/
+      run: cp -R project/ ./site/public
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v2.3.1
