--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site/themes/hugo-theme-even"]
 	path = site/themes/hugo-theme-even
 	url = https://github.com/olOwOlo/hugo-theme-even
+[submodule "project/project"]
+	path = project/repository
+	url = https://github.com/featherbear/unsw-comp3601-project
